# fleet-feast

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  package.json
apps/api/: config.py  data.py  logger.py  main.py  models.py  plot-demand.py  pyproject.toml  redis_client.py  services.py  utils.py
apps/api/models/: __init__.py  state.py  truck.py  zone.py
apps/api/simulation/: __init__.py  agent_decision_loop.py  game_loop.py
apps/api/tools/: __init__.py  dispatch_truck.py  get_zone_forecast.py  hold_position.py  restock_inventory.py  start_serving.py
apps/web/: .gitignore  next.config.ts  openapi-ts.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/components/: Dashboard.tsx
apps/web/app/data/: fleetFeastCity.ts
apps/web/app/hooks/: useGameState.ts
apps/web/app/types/: dashboard.ts
apps/web/lib/: game-store-provider.tsx  hey-api.ts  store.ts  types.ts  utils.ts
