[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "redis>=7.1.0",
]

[dependency-groups]
dev = ["black>=26.1.0", "matplotlib>=3.10.8"]
